---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2025-03-
  Compatibility:
    - Basic compatibility with Gotlag's Glass
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025-03-22
  Changes:
    - First tier of AI training unlocks after you create an ai-trainer
    - Changed name of big accumulator and big solar panel
  Bugfixes:
    - Neodymium rails recycle to the correct ingredients
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-03-21
  Changes:
    - Neodymium rails have a hidden power pole to connect power grids
    - Neodymium rails have much more hitpoints than normal ones
    - Neodymium rails are used as upgrade to normal rails
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-03-19
  Graphics:
    - Fixed circuit connectors position for data extractor, data processor, ai trainer and indexer
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-03-18
  Changes:
    - Silicon cells can be made in EM plants
  Sound:
    - Removed optical cable pipe sound
  Locale:
    - Chinese updated (rlcyyg1108)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-03-17
  Changes:
    - Process indexer locked behind AI core T2 (to make sure the player understands AI core improvement before being stuck researching the indexer for hours)
    - Indexer is 10x more energy hungry
    - AI trainer recipes have 2% more chance to make a core less good
  Compatibility:
    - Removed glass tech redundancy with AAI Industry
    - (planet) Fixed Vortik's deep core mining compatibility
  Graphics: